# Misc

./: P.java  README.md  UDFParaEncoding.c
C-projects/AutoConf-Test1/doc/: README
C-projects/AutoConf-Test1/scripts/: Makefile.am  util.sh
C-projects/AutoConf-configure.ac/: buildRun.sh
C-projects/AutoConf-configure.ac/doc/: Makefile  Makefile.in
C-projects/AutoConf-configure.ac/scripts/: Makefile  Makefile.in
C-projects/AutoConf-configure.ac/src/: helloWorld.h
C-projects/Autobuild/: references
C-projects/Autobuild/AutoConf-Test1/: buildRun.sh  configure.ac
C-projects/Autobuild/AutoConf-Test1/src/: Makefile.am  helloWorld.c
C-projects/Autobuild/AutoConf-configure.ac/: Makefile.am  configure.ac
C-projects/Autobuild/AutoConf-configure.ac/src/: Makefile.am  helloWorld.c
C-projects/Encoding/: UDFParaEncoding.c
C-projects/GnuLibPlay/: search_test.c  test.c
C-projects/play/: ct.sh  math.c  str_test.c  t_str.c
Go-projects/algorithmCoding/: binaryTree.go
Go-projects/training/: channel.go  errorHandling1.go  errorHandling2.go  ex-gorountines.go  exch3-1.go  exch3-2.go
Java-projects/: Solution.java
Java-projects/lintcode/: BST.java  BestTimeBuySell.java  ConnectNodesSameLevel.java  DistanceMaximizing.java  Geometry.java  MISC.java  Matrix.java  Merge.java  MergeTwoSortedArray.java  MyArray.java  MyGraph.java  MyLinkedList.java  MyMath.java  MySearch.java  MySort.java  MyString.java  NextRightPointers.java  Nov2015.java  PainterPartition.java  PascalTriangle.java  QArray.java  Search2DMatrix.java  UniqueString.java  ValidPalindrome.java  ValidateIP.java  VectorRotation.java  category
linux-api-benchmark/: README
linux-api-benchmark/src/: array-vs-hashtable.c  compileRun.sh  sendFile-CopyFiles.c  splice-files.c
(+4 files in other folders)
