#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Falcon-autoconf-test1], [0.0.1], [abc@gmail.com])
AM_INIT_AUTOMAKE(Falcon-autoconf-test1, 0.0.1)

AC_CONFIG_SRCDIR([src/helloWorld.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile doc/Makefile scripts/Makefile)
